Remove outdated KVPY references and update to IAT
- Updated homepage search result from 'IISER and IISC admissions through KVPY and JAM' to 'IISER and IISC admissions through IAT and JAM'
- Removed KVPY from Science and Mathematics FAQ description and replaced with IAT
- Removed KVPY from all keyword arrays in search functionality
- Removed KVPY from search condition logic
- KVPY program no longer exists, replaced by IAT for IISER admissions

--- a/public/index.html
+++ b/public/index.html
@@ -2118,7 +2118,7 @@
                         'data science', 'computational biology', 'biophysics', 'chemical biology',
                         // Career Paths
                         'phd', 'doctorate', 'postdoc', 'scientist', 'researcher', 'professor', 'academia',
-                        'kvpy', 'kishore vaigyanik protsahan yojana', 'inspire', 'jrf', 'csir', 'ugc',
+                        'inspire', 'jrf', 'csir', 'ugc',
                         'gate life sciences', 'jam', 'joint admission test', 'nest', 'national entrance screening test',
                         // Research Areas
                         'fundamental research', 'basic research', 'theoretical research', 'experimental research',
@@ -2183,11 +2183,11 @@
                     ],
                     'research': [
                         'research', 'phd', 'doctorate', 'academic', 'scientist', 'professor', 'postdoc',
-                        'kvpy', 'inspire', 'jrf', 'csir', 'ugc', 'dst', 'dbt', 'fellowship'
+                        'inspire', 'jrf', 'csir', 'ugc', 'dst', 'dbt', 'fellowship'
                     ],
                     'entrance': [
                         'gate', 'jam', 'joint admission test', 'nest', 'national entrance screening test',
-                        'kvpy', 'inspire', 'olympiad', 'ntse', 'jee', 'neet', 'bitsat'
+                        'inspire', 'olympiad', 'ntse', 'jee', 'neet', 'bitsat'
                     ],
                     
                     // Data Analytics and Engineering
@@ -2241,7 +2241,7 @@
                 'BITS Guide': 'Comprehensive guide to BITS Pilani, Goa & Hyderabad including BITSAT, campus life, placements, and admission strategies.',
                 'VIT Guide': 'Complete VIT University guide covering VITEEE, campus culture, rules, placements, and honest student perspectives.',
                 'Medical FAQ': 'Complete NEET and medical admissions guide including KEA counseling, college selection, and fee structures.',
-                'Science and Mathematics FAQ': 'Complete pure science career guidance covering Physics, Chemistry, Biology, Mathematics, research opportunities, and academic pathways. Includes detailed information about IISER, IISC Bangalore, NISER, TIFR, and other premier research institutions. Covers KVPY, INSPIRE, JAM, GATE Life Sciences, and research career paths.',
+                'Science and Mathematics FAQ': 'Complete pure science career guidance covering Physics, Chemistry, Biology, Mathematics, research opportunities, and academic pathways. Includes detailed information about IISER, IISC Bangalore, NISER, TIFR, and other premier research institutions. Covers IAT, INSPIRE, JAM, GATE Life Sciences, and research career paths.',
                 'KCET - Marks vs Rank Analysis': 'Statistical analysis of KCET 2025 marks vs rank correlation with insights.',
                 'ComedK - Marks vs Rank Analysis': 'Comprehensive ComedK marks vs rank analysis based on parent responses.',
                 'JEE - Percentile vs Rank Analysis': 'Complete JEE percentile vs rank data analysis for 2025 sessions.',
@@ -2614,7 +2614,7 @@
                     lowerQuestion.includes('maths') || lowerQuestion.includes('research') || lowerQuestion.includes('pure science') ||
                     lowerQuestion.includes('iiser') || lowerQuestion.includes('iisc') || lowerQuestion.includes('niser') ||
                     lowerQuestion.includes('iat') || lowerQuestion.includes('tifr') || lowerQuestion.includes('isi') ||
-                    lowerQuestion.includes('kvpy') || lowerQuestion.includes('inspire') || lowerQuestion.includes('jam') ||
+                    lowerQuestion.includes('inspire') || lowerQuestion.includes('jam') ||
                     lowerQuestion.includes('gate life') || lowerQuestion.includes('phd') || lowerQuestion.includes('doctorate') ||
                     lowerQuestion.includes('theoretical') || lowerQuestion.includes('computational') || lowerQuestion.includes('experimental')) {
                     fallbackData.document_links.push({
@@ -2622,7 +2622,7 @@
                         url: 'documents/Science and Mathematics.html',
                         relevance: 0.92,
                         questions: [{
-                            question: 'IISER and IISC admissions through KVPY and JAM',
+                            question: 'IISER and IISC admissions through IAT and JAM',
                             similarity: 0.92,
                             preview: 'Complete guide to top science institutions like IISER, IISC Bangalore, NISER, TIFR and admission processes...'
                         }, {
