Additional fixes for console errors and UI improvements
- Hidden the 'Ready (Static Mode)' banner by setting display: none on chatbot-status
- Added cache-busting version parameter to pwa-manager.js (?v=2.0.1)
- Added cache control meta tags to force fresh loads
- Reorganized _headers file with JavaScript MIME types as priority
- Added explicit manifest-src to Content-Security-Policy
- Added proper PWA manifest and icon MIME type declarations

This should resolve:
1. Browser caching issues causing old MIME type errors
2. Persistent chatbot status banner visibility
3. Any remaining PWA icon validation issues

--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
+    <meta http-equiv="Pragma" content="no-cache">
+    <meta http-equiv="Expires" content="0">
     <title>Margdarshak FAQ - Pro-bono Guidance for 12th Grade Parents</title>
     
     <!-- PWA Meta Tags -->
@@ -354,6 +357,7 @@
         }
 
         .chatbot-status {
+            display: none; /* Hide status banner for cleaner UI */
             padding: 4px 12px;
             background: rgba(255, 255, 255, 0.2);
             border-radius: 12px;
@@ -2860,6 +2864,6 @@
     </script>
     
     <!-- PWA Manager Script -->
-    <script src="./js/pwa-manager.js"></script>
+    <script src="./js/pwa-manager.js?v=2.0.1"></script>
 </body>
 </html>
