feat: Add Margdarshak Vault - 2026 document repository
✨ New Features:
- 🗄️ Complete vault system with professional UI/UX
- 📋 HTML-optimized community documents (Groups Guide & Dos/Don'ts)
- 🎨 Responsive design with modern gradient styling
- 📱 Mobile-friendly navigation and viewing
- 🔗 Fixed navigation links for new tab compatibility

📁 Vault Structure:
- Professional document repository homepage
- Streamlined view-only interface (removed Word downloads)
- Enhanced HTML documents with proper styling
- Cross-platform navigation support

🔧 Technical Improvements:
- Navigation integration in main FAQ system
- Professional responsive web design
- Optimized file structure for better performance
- Fixed back navigation for new tab scenarios

📖 Documents Added:
- Margdarshak Community Groups 25-26 (HTML)
- Community Dos and Don'ts Guidelines (HTML)
- Complete implementation documentation

This enhancement provides users with instant access to beautifully formatted community guidelines and group information directly in their browser.

--- a/index.html
+++ b/index.html
@@ -1538,6 +1538,12 @@
                 ]
             },
             {
+                title: 'Margdarshak Vault - 2026',
+                hasSubmenu: false,
+                isSpecial: true,
+                action: 'openVault'
+            },
+            {
                 title: 'About',
                 hasSubmenu: false,
                 isSpecial: true,
@@ -1551,6 +1557,7 @@
             'Medical': '🏥',
             'Pure Science and Maths': '🔬',
             'Data Analytics': '📊',
+            'Margdarshak Vault - 2026': '🗄️',
             'About': 'ℹ️'
         };
 
@@ -1744,9 +1751,11 @@
                         e.preventDefault();
                         
                         if (doc.isSpecial && doc.action) {
-                            // Handle special menu items like About
+                            // Handle special menu items like About and Vault
                             if (doc.action === 'showAbout') {
                                 showAbout();
+                            } else if (doc.action === 'openVault') {
+                                openVault();
                             }
                         } else {
                             // Regular document navigation
@@ -1874,6 +1883,11 @@
             
             // Update page title
             document.title = 'About - Margdarshak FAQ';
+        }
+
+        function openVault() {
+            // Open the vault in a new tab/window
+            window.open('./vault/index.html', '_blank');
         }
 
         // Mobile sidebar functions
