--- a/public/index.html
+++ b/public/index.html
@@ -1542,6 +1542,12 @@
                 ]
             },
             {
+                title: 'Margdarshak Vault - 2026',
+                hasSubmenu: false,
+                isSpecial: true,
+                action: 'openVault'
+            },
+            {
                 title: 'About',
                 hasSubmenu: false,
                 isSpecial: true,
@@ -1555,6 +1561,7 @@
             'Medical': '🏥',
             'Pure Science and Maths': '🔬',
             'Data Analytics': '📊',
+            'Margdarshak Vault - 2026': '🗄️',
             'About': 'ℹ️'
         };
 
@@ -1748,9 +1755,11 @@
                         e.preventDefault();
                         
                         if (doc.isSpecial && doc.action) {
-                            // Handle special menu items like About
+                            // Handle special menu items like About and Vault
                             if (doc.action === 'showAbout') {
                                 showAbout();
+                            } else if (doc.action === 'openVault') {
+                                openVault();
                             }
                         } else {
                             // Regular document navigation
@@ -1878,6 +1887,11 @@
             
             // Update page title
             document.title = 'About - Margdarshak FAQ';
+        }
+
+        function openVault() {
+            // Open the vault in a new tab/window
+            window.open('./vault/index.html', '_blank');
         }
 
         // Mobile sidebar functions
